find_all_sources(. OGL_SRC)
add_library(opengl_spectrum MODULE ${OGL_SRC})
target_link_libraries(opengl_spectrum ${CONFIG_LIBRARY_OPENGL})
if(TARGET_RPI OR TARGET_AML)
  include_directories(${root}/xbmc/visualizations/EGLHelpers)
  target_link_libraries(opengl_spectrum EGLHelpers)
endif(TARGET_RPI OR TARGET_AML)
if(TARGET_COMMON_DARWIN)
  set_target_properties(opengl_spectrum PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plex/${RESOURCEPATH}/addons/visualization.glspectrum)
else(TARGET_COMMON_DARWIN)
  install(DIRECTORY ${root}/addons/visualization.glspectrum DESTINATION ${RESOURCEPATH}/addons COMPONENT RUNTIME)
  install(TARGETS opengl_spectrum DESTINATION ${RESOURCEPATH}/addons/visualization.glspectrum COMPONENT RUNTIME)
endif(TARGET_COMMON_DARWIN)